Updated overflow issue on FAQ Q/A by adding scrollbar

--- a/faq_css.css
+++ b/faq_css.css
@@ -50,7 +50,7 @@ p {
   margin: 20px 0;
   padding: 20px;
   position: relative;
-  overflow: hidden;
+  overflow: auto;
   transition: 0.3s ease;
   height: 140px;
 }
